correct form for Test #10