@@ -2,6 +2,7 @@ package es.upm.miw.devops.code;
 
 import org.junit.jupiter.api.Test;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -13,7 +14,7 @@ class UsersDatabaseTest {
     void testFindAll() {
         UsersDatabase usersDatabase = new UsersDatabase();
 
-        List<User> users = usersDatabase.findAll().collect(Collectors.toList());
+        List<User> users = new ArrayList<>(usersDatabase.findAll().toList());
 
         assertEquals(4, users.size());
         assertEquals("Oscar", users.get(0).getName());
